		every single individual to get printed to the screen in PSO.
	SimpleEvaluatorThreadCG renamed to SimpleEvaluatorThread
	ec.util.ThreadPool added, and various threading methods now use it. 
		This cuts down on the threads created, which causes ECJ to
		be less likely to tickle bugs in the underlying Java or
		operating system due to too many constructed threads.
		Thanks to Ralf Buschermöhle <lobequadrat@googlemail.com>
	Bugfix to Subpopulation.populate(...), which wasn't reading
		subpopulations from files properly if they were precisely the
		right size.  Thanks to Doug <doug1@ten-13.org>
	Bugfix to documentation for Tutorial1, which was still using
		VectorSpecies instead of BitVectorSpecies.  Thanks to
		Fabian Kostadinov <fk@avaco.ch>
	Fixes to ThreadPool to make it serializable again (it got deserializable
		when we moved it into its own class in ec/util)
	Minor fixes to documentation.  Thanks to J. Alejandro Zepeda Cortes 
		<jalejandrozepedac@gmail.com>
	Fixed ThreadPool monitor state bug introduced when refactoring, oops
	Minor renaming in ThreadPool
	Added Exchanger.process(...) method to allow incoming individuals
		to be processed by the user in some custom fashion prior to being
		accepted into the population.
	All VectorIndividual subclasses now check to see if the individuals
		are the same length when doing crossover.  If not, a warning
		is issued and crossover is only done up to the minimum length
		in common.
	Added ec.breed.InitializationPipeline
	Removed old deprecated methods in Species
	Added ec/app/coevolve2/coevolve2.params (which was broken) and removed
		ec/app/coevolve2/ecsuite.params.  Thanks to David Pinheiro 
		<davidsantospinheiro@gmail.com>
	GEProblem can now handle either GPIndividuals or GEIndividuals. Yes,
		that's an exceptionally unusual and rare need.
	De-finalized methods in KozaFitness.  Thanks to Doug <doug1@ten-13.org>
	InterPopulationExchange now clones its migrants